--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -4,11 +4,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F8F4F4"
+    android:gravity="center"
     tools:context=".MainActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="kishan"/>
+
 
     </LinearLayout>
