--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     tools:openDrawer="start"
     android:fitsSystemWindows="true">
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -19,12 +20,11 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbars"
             android:layout_width="match_parent"
-            android:background="#EA6C6C"
             android:layout_height="wrap_content"
             />
     </com.google.android.material.appbar.AppBarLayout>
     <include layout="@layout/main_layout"/>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
@@ -35,7 +35,4 @@
         app:headerLayout="@layout/header_file"
         app:menu="@menu/menu"
         />
-
-
-
 </androidx.drawerlayout.widget.DrawerLayout>
